src/components/Game/Game.css
.game {
  flex: 1;
  min-height: 100%;
  display:flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 14px;
  justify-content: center;
  color:blue;
  padding: 10px;
}

.startBtn {
  background-position: center;
  background-color: transparent;
  border: none;
  background-image: url(../../assets/Poké_Ball_icon.svg);
  background-size: contain;
  background-repeat: no-repeat;
  border-radius: 30px;
  padding: 100px;
  color: yellow;
  font-size: 23px;
  text-shadow: 5px 3px 2px blue;
  font-weight: 900;
  transition: transform .2s ease-in-out;
}

.startBtn:hover {
  transform: scale(1.1);
  animation-name: rotate;
  animation-duration: 1s;

}

.startBtn:active {
  transform: scale(1.3)
}

@keyframes rotate {
   0% {
      transform: rotate(0deg) scale(1.1);
      } 

   100% {
      transform: rotate(360deg) scale(1.1)
      }
}

@keyframes shake {
  0% {
  transform: translateX(0)
}
  50% {
  transform: translateX(50px);
}
  100% {
  transform: translateX(-50px);
}
}


.card {
  display: flex;
  flex-direction: column;
  align-items:center;
  justify-content:center;
  background-color: yellow;
  box-shadow: 3px 3px 8px  black;
  cursor: pointer;
  transition: transform .2s ease-in-out;
}
.card:hover {
  transform: translateY(-20px);
  box-shadow: 7px 7px 8px  blue;
}
.card:active {
  background-color: lightblue;
}

.card div {
  padding: 20px;
}

.card img {
  width: 200px;
}


@media only screen and (max-width: 360px) {
  .card div {
    padding: 0;
  }
  .card img {
    width:160px;
  }
}

